# mist-menubar-app

./: .gitignore  README.md  fix_tray.py  fix_tray_icon.py  gen_icons.py  index.html  package-lock.json  package.json  vite.config.js
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mist.rs
